neuralogic/grammar/NeuralogicParser.py
# Generated from /home/lukas/Workspace/prcvut/pyneuralogic/neuralogic/grammar/Neuralogic.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class NeuralogicParser ( Parser ):

    grammarFileName = "Neuralogic.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "':-'", "'='", "'{'", "'}'", "'<'", "'>'", 
                     "'['", "']'", "'('", "')'", "','", "'/'", "'^'", "'true'", 
                     "'$'", "'~'", "'@'", "'*'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "VARIABLE", "INT", "FLOAT", 
                      "ATOMIC_NAME", "IMPLIED_BY", "ASSIGN", "LCURL", "RCURL", 
                      "LANGLE", "RANGLE", "LBRACKET", "RBRACKET", "LPAREN", 
                      "RPAREN", "COMMA", "SLASH", "CARET", "TRUE", "DOLLAR", 
                      "NEGATION", "SPECIAL", "PRIVATE", "WS", "COMMENT", 
                      "MULTILINE_COMMENT" ]

    RULE_templateFile = 0
    RULE_templateLine = 1
    RULE_examplesFile = 2
    RULE_liftedExample = 3
    RULE_label = 4
    RULE_queriesFile = 5
    RULE_fact = 6
    RULE_atom = 7
    RULE_termList = 8
    RULE_term = 9
    RULE_variable = 10
    RULE_constant = 11
    RULE_predicate = 12
    RULE_conjunction = 13
    RULE_metadataVal = 14
    RULE_metadataList = 15
    RULE_lrnnRule = 16
    RULE_predicateOffset = 17
    RULE_predicateMetadata = 18
    RULE_weightMetadata = 19
    RULE_templateMetadata = 20
    RULE_weight = 21
    RULE_fixedValue = 22
    RULE_offset = 23
    RULE_value = 24
    RULE_number = 25
    RULE_vector = 26
    RULE_matrix = 27
    RULE_dimensions = 28
    RULE_negation = 29

    ruleNames =  [ "templateFile", "templateLine", "examplesFile", "liftedExample", 
                   "label", "queriesFile", "fact", "atom", "termList", "term", 
                   "variable", "constant", "predicate", "conjunction", "metadataVal", 
                   "metadataList", "lrnnRule", "predicateOffset", "predicateMetadata", 
                   "weightMetadata", "templateMetadata", "weight", "fixedValue", 
                   "offset", "value", "number", "vector", "matrix", "dimensions", 
                   "negation" ]

    EOF = Token.EOF
    T__0=1
    VARIABLE=2
    INT=3
    FLOAT=4
    ATOMIC_NAME=5
    IMPLIED_BY=6
    ASSIGN=7
    LCURL=8
    RCURL=9
    LANGLE=10
    RANGLE=11
    LBRACKET=12
    RBRACKET=13
    LPAREN=14
    RPAREN=15
    COMMA=16
    SLASH=17
    CARET=18
    TRUE=19
    DOLLAR=20
    NEGATION=21
    SPECIAL=22
    PRIVATE=23
    WS=24
    COMMENT=25
    MULTILINE_COMMENT=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TemplateFileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def templateLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NeuralogicParser.TemplateLineContext)
            else:
                return self.getTypedRuleContext(NeuralogicParser.TemplateLineContext,i)


        def getRuleIndex(self):
            return NeuralogicParser.RULE_templateFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplateFile" ):
                listener.enterTemplateFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplateFile" ):
                listener.exitTemplateFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplateFile" ):
                return visitor.visitTemplateFile(self)
            else:
                return visitor.visitChildren(self)




    def templateFile(self):

        localctx = NeuralogicParser.TemplateFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_templateFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << NeuralogicParser.INT) | (1 << NeuralogicParser.FLOAT) | (1 << NeuralogicParser.ATOMIC_NAME) | (1 << NeuralogicParser.LCURL) | (1 << NeuralogicParser.LANGLE) | (1 << NeuralogicParser.LBRACKET) | (1 << NeuralogicParser.DOLLAR) | (1 << NeuralogicParser.NEGATION) | (1 << NeuralogicParser.SPECIAL) | (1 << NeuralogicParser.PRIVATE))) != 0):
                self.state = 60
                self.templateLine()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemplateLineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lrnnRule(self):
            return self.getTypedRuleContext(NeuralogicParser.LrnnRuleContext,0)


        def fact(self):
            return self.getTypedRuleContext(NeuralogicParser.FactContext,0)


        def conjunction(self):
            return self.getTypedRuleContext(NeuralogicParser.ConjunctionContext,0)


        def predicateMetadata(self):
            return self.getTypedRuleContext(NeuralogicParser.PredicateMetadataContext,0)


        def predicateOffset(self):
            return self.getTypedRuleContext(NeuralogicParser.PredicateOffsetContext,0)


        def weightMetadata(self):
            return self.getTypedRuleContext(NeuralogicParser.WeightMetadataContext,0)


        def templateMetadata(self):
            return self.getTypedRuleContext(NeuralogicParser.TemplateMetadataContext,0)


        def getRuleIndex(self):
            return NeuralogicParser.RULE_templateLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplateLine" ):
                listener.enterTemplateLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplateLine" ):
                listener.exitTemplateLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplateLine" ):
                return visitor.visitTemplateLine(self)
            else:
                return visitor.visitChildren(self)




    def templateLine(self):

        localctx = NeuralogicParser.TemplateLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_templateLine)
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.lrnnRule()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.fact()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.conjunction()
                self.state = 69
                self.match(NeuralogicParser.T__0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 71
                self.predicateMetadata()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 72
                self.predicateOffset()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 73
                self.weightMetadata()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 74
                self.templateMetadata()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExamplesFileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def label(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NeuralogicParser.LabelContext)
            else:
                return self.getTypedRuleContext(NeuralogicParser.LabelContext,i)


        def IMPLIED_BY(self, i:int=None):
            if i is None:
                return self.getTokens(NeuralogicParser.IMPLIED_BY)
            else:
                return self.getToken(NeuralogicParser.IMPLIED_BY, i)

        def liftedExample(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NeuralogicParser.LiftedExampleContext)
            else:
                return self.getTypedRuleContext(NeuralogicParser.LiftedExampleContext,i)


        def getRuleIndex(self):
            return NeuralogicParser.RULE_examplesFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExamplesFile" ):
                listener.enterExamplesFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExamplesFile" ):
                listener.exitExamplesFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExamplesFile" ):
                return visitor.visitExamplesFile(self)
            else:
                return visitor.visitChildren(self)




    def examplesFile(self):

        localctx = NeuralogicParser.ExamplesFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_examplesFile)
        self._la = 0 # Token type
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 77
                    self.label()
                    self.state = 78
                    self.match(NeuralogicParser.IMPLIED_BY)
                    self.state = 79
                    self.liftedExample()
                    self.state = 83 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << NeuralogicParser.INT) | (1 << NeuralogicParser.FLOAT) | (1 << NeuralogicParser.ATOMIC_NAME) | (1 << NeuralogicParser.LCURL) | (1 << NeuralogicParser.LANGLE) | (1 << NeuralogicParser.LBRACKET) | (1 << NeuralogicParser.DOLLAR) | (1 << NeuralogicParser.NEGATION) | (1 << NeuralogicParser.SPECIAL) | (1 << NeuralogicParser.PRIVATE))) != 0)):
                        break

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 85
                    self.liftedExample()
                    self.state = 88 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << NeuralogicParser.INT) | (1 << NeuralogicParser.FLOAT) | (1 << NeuralogicParser.ATOMIC_NAME) | (1 << NeuralogicParser.LCURL) | (1 << NeuralogicParser.LANGLE) | (1 << NeuralogicParser.LBRACKET) | (1 << NeuralogicParser.DOLLAR) | (1 << NeuralogicParser.NEGATION) | (1 << NeuralogicParser.SPECIAL) | (1 << NeuralogicParser.PRIVATE))) != 0)):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiftedExampleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lrnnRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NeuralogicParser.LrnnRuleContext)
            else:
                return self.getTypedRuleContext(NeuralogicParser.LrnnRuleContext,i)


        def conjunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NeuralogicParser.ConjunctionContext)
            else:
                return self.getTypedRuleContext(NeuralogicParser.ConjunctionContext,i)


        def getRuleIndex(self):
            return NeuralogicParser.RULE_liftedExample

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiftedExample" ):
                listener.enterLiftedExample(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiftedExample" ):
                listener.exitLiftedExample(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiftedExample" ):
                return visitor.visitLiftedExample(self)
            else:
                return visitor.visitChildren(self)




    def liftedExample(self):

        localctx = NeuralogicParser.LiftedExampleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_liftedExample)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 94
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 92
                    self.lrnnRule()
                    pass

                elif la_ == 2:
                    self.state = 93
                    self.conjunction()
                    pass


                self.state = 96 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << NeuralogicParser.INT) | (1 << NeuralogicParser.FLOAT) | (1 << NeuralogicParser.ATOMIC_NAME) | (1 << NeuralogicParser.LCURL) | (1 << NeuralogicParser.LANGLE) | (1 << NeuralogicParser.LBRACKET) | (1 << NeuralogicParser.DOLLAR) | (1 << NeuralogicParser.NEGATION) | (1 << NeuralogicParser.SPECIAL) | (1 << NeuralogicParser.PRIVATE))) != 0)):
                    break

            self.state = 98
            self.match(NeuralogicParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conjunction(self):
            return self.getTypedRuleContext(NeuralogicParser.ConjunctionContext,0)


        def getRuleIndex(self):
            return NeuralogicParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):

        localctx = NeuralogicParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_label)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.conjunction()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueriesFileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NeuralogicParser.AtomContext)
            else:
                return self.getTypedRuleContext(NeuralogicParser.AtomContext,i)


        def IMPLIED_BY(self, i:int=None):
            if i is None:
                return self.getTokens(NeuralogicParser.IMPLIED_BY)
            else:
                return self.getToken(NeuralogicParser.IMPLIED_BY, i)

        def conjunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NeuralogicParser.ConjunctionContext)
            else:
                return self.getTypedRuleContext(NeuralogicParser.ConjunctionContext,i)


        def getRuleIndex(self):
            return NeuralogicParser.RULE_queriesFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueriesFile" ):
                listener.enterQueriesFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueriesFile" ):
                listener.exitQueriesFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQueriesFile" ):
                return visitor.visitQueriesFile(self)
            else:
                return visitor.visitChildren(self)




    def queriesFile(self):

        localctx = NeuralogicParser.QueriesFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_queriesFile)
        self._la = 0 # Token type
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 102
                    self.atom()
                    self.state = 103
                    self.match(NeuralogicParser.IMPLIED_BY)
                    self.state = 104
                    self.conjunction()
                    self.state = 105
                    self.match(NeuralogicParser.T__0)
                    self.state = 109 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << NeuralogicParser.INT) | (1 << NeuralogicParser.FLOAT) | (1 << NeuralogicParser.ATOMIC_NAME) | (1 << NeuralogicParser.LCURL) | (1 << NeuralogicParser.LANGLE) | (1 << NeuralogicParser.LBRACKET) | (1 << NeuralogicParser.DOLLAR) | (1 << NeuralogicParser.NEGATION) | (1 << NeuralogicParser.SPECIAL) | (1 << NeuralogicParser.PRIVATE))) != 0)):
                        break

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 111
                    self.conjunction()
                    self.state = 112
                    self.match(NeuralogicParser.T__0)
                    self.state = 116 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << NeuralogicParser.INT) | (1 << NeuralogicParser.FLOAT) | (1 << NeuralogicParser.ATOMIC_NAME) | (1 << NeuralogicParser.LCURL) | (1 << NeuralogicParser.LANGLE) | (1 << NeuralogicParser.LBRACKET) | (1 << NeuralogicParser.DOLLAR) | (1 << NeuralogicParser.NEGATION) | (1 << NeuralogicParser.SPECIAL) | (1 << NeuralogicParser.PRIVATE))) != 0)):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(NeuralogicParser.AtomContext,0)


        def getRuleIndex(self):
            return NeuralogicParser.RULE_fact

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFact" ):
                listener.enterFact(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFact" ):
                listener.exitFact(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFact" ):
                return visitor.visitFact(self)
            else:
                return visitor.visitChildren(self)




    def fact(self):

        localctx = NeuralogicParser.FactContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fact)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.atom()
            self.state = 121
            self.match(NeuralogicParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predicate(self):
            return self.getTypedRuleContext(NeuralogicParser.PredicateContext,0)


        def weight(self):
            return self.getTypedRuleContext(NeuralogicParser.WeightContext,0)


        def negation(self):
            return self.getTypedRuleContext(NeuralogicParser.NegationContext,0)


        def termList(self):
            return self.getTypedRuleContext(NeuralogicParser.TermListContext,0)


        def getRuleIndex(self):
            return NeuralogicParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = NeuralogicParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atom)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << NeuralogicParser.INT) | (1 << NeuralogicParser.FLOAT) | (1 << NeuralogicParser.LCURL) | (1 << NeuralogicParser.LANGLE) | (1 << NeuralogicParser.LBRACKET) | (1 << NeuralogicParser.DOLLAR))) != 0):
                self.state = 123
                self.weight()


            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==NeuralogicParser.NEGATION:
                self.state = 126
                self.negation()


            self.state = 129
            self.predicate()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==NeuralogicParser.LPAREN:
                self.state = 130
                self.termList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(NeuralogicParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(NeuralogicParser.RPAREN, 0)

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NeuralogicParser.TermContext)
            else:
                return self.getTypedRuleContext(NeuralogicParser.TermContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(NeuralogicParser.COMMA)
            else:
                return self.getToken(NeuralogicParser.COMMA, i)

        def getRuleIndex(self):
            return NeuralogicParser.RULE_termList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermList" ):
                listener.enterTermList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermList" ):
                listener.exitTermList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermList" ):
                return visitor.visitTermList(self)
            else:
                return visitor.visitChildren(self)




    def termList(self):

        localctx = NeuralogicParser.TermListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_termList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(NeuralogicParser.LPAREN)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << NeuralogicParser.VARIABLE) | (1 << NeuralogicParser.INT) | (1 << NeuralogicParser.FLOAT) | (1 << NeuralogicParser.ATOMIC_NAME))) != 0):
                self.state = 134
                self.term()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==NeuralogicParser.COMMA:
                    self.state = 135
                    self.match(NeuralogicParser.COMMA)
                    self.state = 136
                    self.term()
                    self.state = 141
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 144
            self.match(NeuralogicParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constant(self):
            return self.getTypedRuleContext(NeuralogicParser.ConstantContext,0)


        def variable(self):
            return self.getTypedRuleContext(NeuralogicParser.VariableContext,0)


        def getRuleIndex(self):
            return NeuralogicParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = NeuralogicParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_term)
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [NeuralogicParser.INT, NeuralogicParser.FLOAT, NeuralogicParser.ATOMIC_NAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.constant()
                pass
            elif token in [NeuralogicParser.VARIABLE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.variable()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(NeuralogicParser.VARIABLE, 0)

        def getRuleIndex(self):
            return NeuralogicParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = NeuralogicParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(NeuralogicParser.VARIABLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATOMIC_NAME(self):
            return self.getToken(NeuralogicParser.ATOMIC_NAME, 0)

        def INT(self):
            return self.getToken(NeuralogicParser.INT, 0)

        def FLOAT(self):
            return self.getToken(NeuralogicParser.FLOAT, 0)

        def getRuleIndex(self):
            return NeuralogicParser.RULE_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant" ):
                listener.enterConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant" ):
                listener.exitConstant(self)
